--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
   </head>
   <body>
-    <section class="showcase active">
+    <section class="showcase">
       <header>
         <h2 class="logo">Sri Lanka Travels</h2>
         <div class="toggle"></div>
